src/test/ui/borrowck/issue-85765.stderr
error[E0596]: cannot borrow `*rofl` as mutable, as it is behind a `&` reference
  --> $DIR/issue-85765.rs:5:5
   |
LL |     let rofl: &Vec<Vec<i32>> = &mut test;
   |         ---- help: consider changing this to be a mutable reference: `&mut Vec<Vec<i32>>`
LL |
LL |     rofl.push(Vec::new());
   |     ^^^^^^^^^^^^^^^^^^^^^ `rofl` is a `&` reference, so the data it refers to cannot be borrowed as mutable

error[E0594]: cannot assign to `*r`, which is behind a `&` reference
  --> $DIR/issue-85765.rs:12:5
   |
LL |     let r = &mutvar;
   |             ------- help: consider changing this to be a mutable reference: `&mut mutvar`
LL |
LL |     *r = 0;
   |     ^^^^^^ `r` is a `&` reference, so the data it refers to cannot be written

error[E0594]: cannot assign to `*x`, which is behind a `&` reference
  --> $DIR/issue-85765.rs:19:5
   |
LL |     let x: &usize = &mut{0};
   |         - help: consider changing this to be a mutable reference: `&mut usize`
LL |
LL |     *x = 1;
   |     ^^^^^^ `x` is a `&` reference, so the data it refers to cannot be written

error[E0594]: cannot assign to `*y`, which is behind a `&` reference
  --> $DIR/issue-85765.rs:26:5
   |
LL |     let y: &usize = &mut(0);
   |         - help: consider changing this to be a mutable reference: `&mut usize`
LL |
LL |     *y = 1;
   |     ^^^^^^ `y` is a `&` reference, so the data it refers to cannot be written

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0594, E0596.
For more information about an error, try `rustc --explain E0594`.
